[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/menufont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/submenufont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/dbg.gd" type="Script" id=3]

[node name="dbg" type="VBoxContainer"]
margin_left = 124.0
margin_top = 117.0
margin_right = 444.0
margin_bottom = 350.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 11
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sep_top" type="CenterContainer" parent="."]
margin_right = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="info" type="HBoxContainer" parent="."]
margin_top = 11.0
margin_right = 320.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="info"]
margin_right = 161.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
custom_constants/line_spacing = 4
text = "Show Debug Info"
valign = 1

[node name="btn" type="Button" parent="info"]
margin_left = 165.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
flat = true
align = 2

[node name="col_ind" type="HBoxContainer" parent="."]
margin_top = 49.0
margin_right = 320.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="col_ind"]
margin_right = 206.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
custom_constants/line_spacing = 4
text = "Show Collision Range"
valign = 1

[node name="btn" type="Button" parent="col_ind"]
margin_left = 210.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
flat = true
align = 2

[node name="lvl_sel" type="HBoxContainer" parent="."]
margin_top = 87.0
margin_right = 320.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="lvl_sel"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
custom_constants/line_spacing = 4
text = "Level Select"
valign = 1

[node name="btn" type="Button" parent="lvl_sel"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
flat = true
align = 2

[node name="hlth_drn" type="HBoxContainer" parent="."]
margin_top = 125.0
margin_right = 320.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="hlth_drn"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
custom_constants/line_spacing = 4
text = "Health Drain"
valign = 1

[node name="btn" type="Button" parent="hlth_drn"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
flat = true
align = 2

[node name="hlth_full" type="HBoxContainer" parent="."]
margin_top = 163.0
margin_right = 320.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="hlth_full"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
custom_constants/line_spacing = 4
text = "Full Health"
valign = 1

[node name="btn" type="Button" parent="hlth_full"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
flat = true
align = 2

[node name="hlth_nil" type="HBoxContainer" parent="."]
margin_top = 201.0
margin_right = 320.0
margin_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="hlth_nil"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
custom_constants/line_spacing = 4
text = "No Health"
valign = 1

[node name="btn" type="Button" parent="hlth_nil"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
flat = true
align = 2

[node name="sep_bot" type="CenterContainer" parent="."]
margin_top = 239.0
margin_right = 320.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dbg" type="Button" parent="."]
margin_top = 250.0
margin_right = 320.0
margin_bottom = 283.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Back"
flat = true
align = 2
